# task-test

./: README.md  app.py  main.py  pyproject.toml  readme.md
core/: remote.py  stub.py
